# TicTacToe

./: .gitignore  CMakeLists.txt  index.html  readme.md
src/: Game.cpp  Game.h
src/Core/: Context.h  GameConfig.h  ResourceManager.cpp  ResourceManager.h  State.h  StateMachine.cpp  StateMachine.h  Time.cpp  Time.h
src/Gameplay/: AI.h  Board.cpp  Board.h  Move.h  RandomAI.cpp  RandomAI.h
src/State/: GameSetupState.cpp  GameSetupState.h  GameplayState.cpp  GameplayState.h  MenuState.cpp  MenuState.h
src/UI/: Button.cpp  Button.h  Colors.h
